{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 13,
  "lineage": "2c410208-c809-ae95-6953-3c0edae7392a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927595808650:vpc/vpc-038550b270a1ad338",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0191649799affa6db",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c2cf6ff42ea6532b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038550b270a1ad338",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00b238dd58989bbf6",
            "owner_id": "927595808650",
            "tags": {
              "Name": "Default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927595808650:loadbalancer/app/phonebook-lb/30b02f9970f323f5",
            "arn_suffix": "app/phonebook-lb/30b02f9970f323f5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "phonebook-lb-1094865348.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:927595808650:loadbalancer/app/phonebook-lb/30b02f9970f323f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "phonebook-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-003fcdda3f6951dcc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-059d115c0d236de7d"
              },
              {
                "subnet_id": "subnet-06f04017efefd512a"
              },
              {
                "subnet_id": "subnet-085b2eaf960c8a34a"
              },
              {
                "subnet_id": "subnet-0a1e1f5350147d6f5"
              },
              {
                "subnet_id": "subnet-0cf88cb3e761a580e"
              },
              {
                "subnet_id": "subnet-0f5c6595c8bf81671"
              }
            ],
            "subnets": [
              "subnet-059d115c0d236de7d",
              "subnet-06f04017efefd512a",
              "subnet-085b2eaf960c8a34a",
              "subnet-0a1e1f5350147d6f5",
              "subnet-0cf88cb3e761a580e",
              "subnet-0f5c6595c8bf81671"
            ],
            "vpc_id": "vpc-038550b270a1ad338",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_subnets.example",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927595808650:targetgroup/phonebook-lb-tg/f47d05cfa5418e2c",
            "arn_suffix": "targetgroup/phonebook-lb-tg/f47d05cfa5418e2c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:927595808650:targetgroup/phonebook-lb-tg/f47d05cfa5418e2c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "phonebook-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-038550b270a1ad338"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927595808650:security-group/sg-003fcdda3f6951dcc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003fcdda3f6951dcc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup",
            "name_prefix": "",
            "owner_id": "927595808650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_ALBSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_ALBSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-038550b270a1ad338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927595808650:security-group/sg-00946229be71c7999",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00946229be71c7999",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003fcdda3f6951dcc"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "927595808650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-038550b270a1ad338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927595808650:security-group/sg-025f4b83f985503c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025f4b83f985503c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003fcdda3f6951dcc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSecurityGroup",
            "name_prefix": "",
            "owner_id": "927595808650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-038550b270a1ad338"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}